--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,34 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.subpanel {
+    display: inline-block;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* The container must be positioned relative: */
+.chilli-list something {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+.mainpanel {
+    top: 50%;
+    left: 50%;
+}
+.subpanel select {
+    background: #0563af;
+    color: #fff;
+    padding: 10px;
+    margin: 10px;
+    border: none;
+    box-shadow: 0 5px 25px rgba(0,0,0,.5);
+    -webkit-appearance: button;
+}
+
+.subpanel input {
+    background: #b5c6d4;
+    color: #fff;
+    padding: 10px;
+    margin: 10px;
+    border: none;
+    box-shadow: 0 5px 25px rgba(0,0,0,.5);
 }
