--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,17 @@
   }
   
 .mainpanel {
-    top: 50%;
-    left: 50%;
+    width: 500px;
+    height: 110px;
+    background-color: pink;
+
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
 }
 .subpanel select {
     background: #0563af;
